done with basic version of app, will add more features, upgrade others

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,22 @@
   text-align: center;
 }
 
+body{
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  height: 100vh;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
+.outlet_wrapper{
+  height: 70vh;
+}
+
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
